# pkgPlay

./: README.md  pyproject.toml  setup.py.bak
src/pkgplay/: __init__.py  logMan.py  logs.py  test.py
src/pkgplay/libFuncs/: func_test.py  networking.py
