[tool.poetry]
name = "pkgPlay"
version = "0.0.1a0"
description = "A skeleton package with logging"
authors = ["Gomer Compyle <gomer@pvtcompyle.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"