[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "pkgPlay"
version = "0.0.1a0"
description = "A skeleton package with logging"
authors = ["Gomer Compyle <gomer@pvtcompyle.com>"]

[options]
python_requires = ">=3.11"

[options.packages.find]
where = "src"

[options.extras_require]
test = ["pytest"]

[options.package_data]
* = ["*.txt", "*.rst"]
pkgPlay = ["*.msg"]