[project]
name = "pkgPlay"
version = "0.0.1a0"
authors = [
    { name="Gomer Compyle", email="gomer@pvtcompyle.com" }
]
description = "A skeleton package with logging"
readme = "README.md"

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
adopts = [
    "--import-mode=importlib",
]

[project.urls]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"